DOC-13347 fix unreadable inline example
Our highlightjs style breaks redocly inline examples, so we ensure it is ignored.

Q: should we instead disable highlightjs for these pages?

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -69,12 +69,17 @@ pre {
 code {
   background-color: var(--color-brand-peach);
   word-spacing: -0.125em;
-  color: var(--color-brand-gray1);
+  color: red; /* var(--color-brand-gray1); */
 }
 
 /* special case inside redocly div to avoid overwriting redocly managed code colours */
 #redoc code {
   background-color: inherit;
+  color: inherit;
+}
+
+#redoc .hljs-comment,
+#redoc .hljs-meta {
   color: inherit;
 }
 
